# calib_software

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/superpowers/plans/: 2026-06-17-rust-handeye-gap-closure.md
src/: App.test.tsx  App.tsx  CoordinatePreview3D.tsx  TitleBar.tsx  mockData.ts  styles.css  three-shim.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
st_handeye_calibration/: AGENTS.md  analyze_frame_error.py  analyze_poses.py  api_server.py  calibrate.py  calibration_balanced.yaml  calibration_result.yaml  calibration_result_highweight.yaml  calibration_results.yaml  gui_api.py  requirements.txt  result_payloads.py  test_balanced.yaml  test_joint.yaml  test_more_iter.yaml
st_handeye_calibration/st_handeye/: __init__.py  board.py  calibrator.py  camera.py  depth.py  evaluation.py  io.py  optimizer.py  types.py
st_handeye_calibration/tests/: test_calibration_refactor.py  test_gui_api.py
