[package]
name = "handeye-manager-ui"
version = "0.1.0"
description = "HandEyeManager UI review shell"
authors = ["HandEyeManager"]
edition = "2021"

[lib]
name = "handeye_manager_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
