[package]
name = "handeye-manager-ui"
version = "0.1.0"
description = "HandEyeManager UI review shell"
authors = ["HandEyeManager"]
edition = "2021"

[lib]
name = "handeye_manager_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
nalgebra = "0.33"
apex-manifolds = "0.2.0"
apex-solver = "1.3.0"
opencv = { version = "0.98.2", default-features = false, features = ["clang-runtime", "aruco", "aruco_detector", "calib3d", "imgcodecs", "imgproc", "objdetect"] }
